# django-beat-periodic

./: .gitignore  LICENSE  README.md  pyproject.toml
django_beat_periodic/: __init__.py  apps.py  decorators.py  registry.py  sync.py
django_beat_periodic/management/: utils.py
django_beat_periodic/management/commands/: _base_toggle.py  disable_periodic_task.py  enable_periodic_task.py  list_periodic_tasks.py  sync_periodic_tasks.py
tests/: conftest.py  settings.py  test_decorators.py  test_management_commands.py
