[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-beat-periodic"
version = "0.1.0"
description = "Auto-populate django-celery-beat PeriodicTask objects with a simple @periodic_task decorator."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Waseem Kntar" },
]
keywords = ["django", "celery", "periodic", "beat", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Celery",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=3.2",
    "celery>=5.0",
    "django-celery-beat>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/waseemkntar/django-beat-periodic"
Repository = "https://github.com/waseemkntar/django-beat-periodic"

[tool.hatch.build.targets.wheel]
packages = ["django_beat_periodic"]
